--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,9 @@
     --color-icons: #AFB1B8;
     --color-background-icons: rgba(255, 255, 255, 0.1);
     --color-border: #EEEEEE; 
+    --background-color-overlay: rgba(33, 150, 243, 0.9); 
+    --background-color-backdrop: rgba(0, 0, 0, 0.2);
+    --background-color-description: rgba(47, 48, 58, 0.8);
 }
 body {
     font-family: var(--ff-roboto);
@@ -44,6 +47,7 @@ img {
  padding: 0 15px;
 }
 .header {
+    height: 80px;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.1721;
@@ -87,6 +91,7 @@ display: flex;
 .address-list .link {
     color: var(--color-white-transperent);
     line-height: 1.7142;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-list .map {
     color: var(--color-white);
@@ -124,6 +129,7 @@ display: flex;
     fill: var(--color-white);
     justify-content: center;
     align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .socials-list-footer a:hover,
 .socials-list-footer a:focus {
@@ -155,18 +161,34 @@ nav {
 .nav-header {
     display: flex;
     margin-left: 93px;
+    align-items: center;
+}
+.nav-header li {
+    position: relative;
 }
 .nav-header li:not(:last-child) {
     margin-right: 50px;
 }
 .nav-header .link {
     display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.nav-header a:hover,
-.nav-header a:focus {
+.nav-header .link:hover,
+.nav-header .link:focus {
     color: var(--color-accent);
+}
+.current {
+    color: var(--color-accent);
+}
+.current::after {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: -31px;
+    height: 4px;
+    width: 100%;
+    background-color: currentcolor;
+    border-radius: 2px;
 }
 .contacts-header {
     display: flex;
@@ -183,6 +205,7 @@ nav {
     
     color: var(--color-primary);
     fill: currentcolor;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-header-icon {
     margin-right: 10px;
@@ -288,6 +311,26 @@ nav {
 .we-do-list li + li {
     margin-left: 30px;
 }
+.we-do-list li {
+    position: relative;
+}
+.we-do-description {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 70px;
+    z-index: 1;
+    padding-top: 27px;
+    padding-bottom: 27px;
+
+    background-color: var(--background-color-description);
+    font-size: 14px;
+    font-weight: var(--font-weight-heading);
+    color: var(--color-white);
+    line-height: 1.1721;
+    text-align: center;
+    text-transform: uppercase;
+}
 .team-section {
     background-color: var(--color-background-tertiary);
 }
@@ -337,6 +380,9 @@ nav {
     fill: var(--color-icons);
     justify-content: center;
     align-items: center;
+    transition-property: fill, background-color;
+    transition-duration: 250ms, 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1), cubic-bezier(0.4, 0, 0.2, 1);
 }
 .socials-list-team a:hover,
 .socials-list-team a:focus {
@@ -359,6 +405,7 @@ nav {
     fill: var(--color-icons);
     border: 1px solid var(--color-icons);
     border-radius: 4px;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);;
 }
 .clients-item:hover,
 .clients-item:focus {
@@ -384,6 +431,9 @@ nav {
     text-align: center;
     border: none;
     border-radius: 4px;
+    transition-property: background-color, color, box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-nav-button:hover,
 .portfolio-nav-button:focus {
@@ -402,6 +452,9 @@ nav {
     border:1px solid var(--color-border);
     max-width: 370px;
     max-height: 404px;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    position: relative;
+    overflow: hidden;
 }
 .portfolio-list li:hover,
 .portfolio-list li:focus {
@@ -423,4 +476,69 @@ nav {
 
     line-height: 1.875;
     color: var(--color-primary);
+}
+.portfolio-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 63px 24px;
+    background-color: var(--background-color-overlay);
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-overlay p {
+    color: var(--color-white);
+    font-size: 18px;
+    line-height: 1.5555;
+}
+.portfolio-list li:hover .portfolio-overlay,
+.portfolio-list li:focus .portfolio-overlay {
+    transform: translateY(0);
+}
+.backdrop {
+    position: fixed;
+    background-color: var(--background-color-backdrop);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    
+    opacity: 1;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    min-width: 528px;
+    min-height: 581px;
+    padding: 15px;
+    background-color: var(--color-white);
+    
+    transform: scale(1) translate(-50%, -50%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+.backdrop.is-hidden .modal {
+    transform: scale(1.5) translate(-50%, -50%);
+}
+.close-modal-button {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 8px;
+    right: 8px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    margin-top: 8px;
+    margin-right: 8px;
 }
