--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,7 @@ img {
     font-size: 14px;
     line-height: 1.1721;
     letter-spacing: 0.02em;
+    border-bottom: 1px solid #ECECEC;
 }
 .footer {
     padding-top: 60px;
@@ -163,14 +164,14 @@ nav {
     margin-left: 93px;
     align-items: center;
 }
-.nav-header li {
-    position: relative;
-}
 .nav-header li:not(:last-child) {
     margin-right: 50px;
 }
 .nav-header .link {
     display: block;
+    padding: 32px 0 31px;
+
+    position: relative;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-header .link:hover,
@@ -184,7 +185,7 @@ nav {
     content: '';
     display: block;
     position: absolute;
-    bottom: -31px;
+    bottom: 0;
     height: 4px;
     width: 100%;
     background-color: currentcolor;
@@ -276,6 +277,10 @@ nav {
 }
 .features-list {
     display: flex;
+    overflow: auto;
+}
+.features-list li {
+    max-width: 270px;
 }
 .features-list li + li {
     margin-left: 30px;
@@ -450,11 +455,9 @@ nav {
 .portfolio-list li {
     padding-bottom: 20px;
     border:1px solid var(--color-border);
-    max-width: 370px;
+    flex-basis: calc((100%-96px)/3);
     max-height: 404px;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    position: relative;
-    overflow: hidden;
 }
 .portfolio-list li:hover,
 .portfolio-list li:focus {
@@ -476,6 +479,10 @@ nav {
 
     line-height: 1.875;
     color: var(--color-primary);
+}
+.portfolio-thumb {
+    position: relative;
+    overflow: hidden;
 }
 .portfolio-overlay {
     position: absolute;
@@ -504,6 +511,7 @@ nav {
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 2;
     
     opacity: 1;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -517,7 +525,7 @@ nav {
     padding: 15px;
     background-color: var(--color-white);
     
-    transform: scale(1) translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-hidden {
@@ -526,7 +534,7 @@ nav {
     pointer-events: none;
 }
 .backdrop.is-hidden .modal {
-    transform: scale(1.5) translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(1.5);
 }
 .close-modal-button {
     position: absolute;
