--- a/css/styles.css
+++ b/css/styles.css
@@ -455,7 +455,7 @@ nav {
 .portfolio-list li {
     padding-bottom: 20px;
     border:1px solid var(--color-border);
-    flex-basis: calc((100%-96px)/3);
+    max-width: 370px;
     max-height: 404px;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -465,16 +465,18 @@ nav {
 }
 .portfolio-list img {
     margin-bottom: 20px;
+    display: block;
+    max-width: 370px;
 }
 .portfolio-list .heading {
-    margin-right: 24px;
+    /* margin-right: 24px; */
     margin-left: 24px;
     margin-bottom: 4px;
 
     line-height: 2;
 }
 .portfolio-list p {
-    margin-right: 24px;
+    /* margin-right: 24px; */
     margin-left: 24px;
 
     line-height: 1.875;
